# darparu

./: .bazelrc  .gitignore  BUILD  MODULE.bazel  Makefile  README.md
darparu/: BUILD  triangulate_2d.h
darparu/renderer/: BUILD  algebra.cc  algebra.h  camera.cc  camera.h  camera_texture.cc  camera_texture.h  gl_error_macro.cc  gl_error_macro.h  io_control.cc  io_control.h  projection_context.h  renderable.h  renderer.cc  renderer.h  shader.cc  shader.h  shader_context_manager.cc  shader_context_manager.h  texture.cc  texture.h
darparu/renderer/cameras/: BUILD  orbit.h  pan.h
darparu/renderer/entities/: BUILD  ball.cc  ball.h  container.cc  container.h  light.cc  light.h  mesh_2d.cc  mesh_2d.h  plane.cc  plane.h  water.cc  water.h  water_normals.cc  water_normals.h
darparu/renderer/io_controls/: BUILD  simple_2d.h  simple_3d.h
darparu/renderer/shaders/: BUILD  simple_2d.vs  simple_with_normal_matrix.vs
scripts/: flamegraph.sh
